fixed nav buttons disappearing on small screens

--- a/styles.scss
+++ b/styles.scss
@@ -72,7 +72,7 @@
     top: 0;
     width: auto;
   }
-  .topnav.responsive button {
+  .topnav.responsive .navbtn {
     float: none;
     display: block;
     text-align: left;
